Fix some work overflow grabage on articles

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -211,6 +211,10 @@ body {
 .container {
   max-width: 960px;
   margin: auto;
+  word-wrap: break-word;
+  @include narrow {
+    margin: inherit;
+  }
 }
 
 .row {
